--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "homepage": "https://github.com/anilopchisak/frontend-project-44#readme",
   "bin": {
     "brain-games": "bin/brain-games.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0"
   }
 }
