--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-node_modules/*
+node_modules/
 
-.idea/*
+.idea/
 
-.vscode/*
-!.vscode/settings.json
-!.vscode/launch.json
-!.vscode/tasks.json
+.vscode/
