--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "[![Actions Status](https://github.com/anilopchisak/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/anilopchisak/frontend-project-44/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "eslint": "^9.17.0",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^15.14.0"
   }
 }
