--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/anilopchisak/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/anilopchisak/frontend-project-44/actions)",
-  "main": "index.js",
+  "description": "Brain Games [![Actions Status](https://github.com/anilopchisak/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/anilopchisak/frontend-project-44/actions)",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
